--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #80d4ea;
+	background-image: url(https://download.unsplash.com/photo-1428550670225-15f007f6f1ba);
 }
 
 #clock {
