--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ body {
 }
 
 h1 {
-	height:100px;
-	width: 800px;
+	height:450px;
+	width: 900px;
 	margin: auto;
 	position: absolute;
-	top: 0px;left: 0;bottom: 400px;right: 0;
-	padding-top: 70px;
-	font-family:courier,monospace;
+	top: 0px;left: 0;bottom: 0;right: 0;
+	padding-top: 90px;
+	font-family:Brush Script MT, Brush Script Std, cursive;
 	text-align:center;
 	color:white;
-	font-size: 100px;
+	font-size: 130px;
 }
